Fix footer, overlap was occuring with elements above it - position relative on footer

--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -6,12 +6,14 @@ footer {
   position: relative;
   width: 100vw;
   bottom: 0;
+	left: 0;
   padding-top: $padding;
   padding-bottom: $padding;
 
   .row {
     display: flex;
     align-items: center;
+		margin: 0 2em 0 2em;
   }
 
   .top {
