--- a/app/assets/stylesheets/partials/_index.scss
+++ b/app/assets/stylesheets/partials/_index.scss
@@ -37,7 +37,7 @@
 	@include home-box($white);
 	display: block;
 	padding: 3em;
-	margin: -2em -16px 0.6em -16px;
+	margin: 0 -16px 0.6em -16px;
 
 	h1 {
 		font-weight: 100 !important;
