--- a/app/assets/stylesheets/partials/_nav.scss
+++ b/app/assets/stylesheets/partials/_nav.scss
@@ -5,7 +5,8 @@
   color: $white;
   border-radius: 0;
   padding: $padding / 2;
-  margin: -1px -16px 2em -16px;
+	padding-left: $padding;
+  margin: -1px -16px 0 -16px;
 
   .navbar-header > .navbar-brand {
     color: $bright-orange;
@@ -52,10 +53,10 @@
 
   .navbar-text {
     margin: 7px 15px 5px 0 !important;
+		text-align: right !important;
 
     .btn-prim {
       margin-left: $margin;
-      text-decoration: none;
     }
 
     a {
